Second_Step/data/44/78/execution.txt

Comment :=>>-The compilation or preparation of execution has failed
<|--
Executable.java:11: error: constructor Scores in class Scores cannot be applied to given types;
        Scores scores= new Scores(list);
                       ^
  required: no arguments
  found: int[]
  reason: actual and formal argument lists differ in length
1 error
Not compiled
--|>
Grade :=>>0.00000
